[package]
name = "traproot-bdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

miniscript={version="9.0.0"}
bitcoin={ version = "0.29.1", features=["rand","std"]}
bitcoin_hashes = { version = "0.11.0", default-features = false }
electrum-client = "0.18.0"
bitcoincore-rpc = "0.16.0"
clightningrpc = "0.2.0"
serde_json = "1.0.105"
serde = "1.0.188"
ureq = {version = "2.7.1", features = ["json"] }
thiserror = "1.0.48"